--- a/Contacts.html
+++ b/Contacts.html
@@ -6,7 +6,14 @@
 <style>
 p#A {
   padding-top: 50px;
-  padding-bottom: 25px;
+  padding-bottom: 0px;
+  text-align: center;
+  font-size: 32px;
+}
+
+p#B {
+  padding-top: 0px;
+  padding-bottom: 0px;
   text-align: center;
   font-size: 32px;
 }
@@ -24,20 +31,20 @@ body {
   Contacts
 </p>
 
-<p>      Aden Xin
+<p id="A">      Aden Xin
 </p>
-<p></p>
-<p>
+
+<p id="B">
     Email:aden_xin@gmail.com
 </p>
-<p></p>
-<p>    Eerie Wolf
+
+<p id="A">    Eerie Wolf
 </p>
-<p>
+<p id="B">
     Email: We could not locate this...
 </p>
-<p></p>
-<p>    James Gold
+
+<p id="A">    James Gold
 
 </p>
 
