--- a/Contacts.html
+++ b/Contacts.html
@@ -4,18 +4,22 @@
   <link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
   <title>Contacts</title>
 <style>
-p#A {
+p#Title {
   padding-top: 50px;
   padding-bottom: 0px;
   text-align: center;
   font-size: 32px;
+}
+p#A {
+  padding-top: 50px;
+  padding-bottom: 0px;
+  text-align: center;
 }
 
 p#B {
   padding-top: 0px;
   padding-bottom: 0px;
   text-align: center;
-  font-size: 32px;
 }
 body {
     font-family: 'Montserrat', sans-serif;
@@ -27,7 +31,7 @@ body {
 </style>
 </head>
 <body>
-<p id="A">
+<p id="Title">
   Contacts
 </p>
 
