--- a/game.html
+++ b/game.html
@@ -16,7 +16,8 @@ p.B {
   color: #900000;
 }
 body {
-    background-color: #999999;
+    background-color: #000000
+    color: #9f9f9f;
 }
 </style>
 </head>
