--- a/game.html
+++ b/game.html
@@ -9,6 +9,7 @@ p.A {
   padding-bottom: 25px;
   padding-left: 500px;
   font-size: 40px;
+  color: #999999;
 }
 p.B {
   padding-top: 50px;
@@ -17,7 +18,6 @@ p.B {
 }
 body {
     background-color: #000000
-    color: #9f9f9f;
 }
 </style>
 </head>
