--- a/game.html
+++ b/game.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>ANERA</title>
+  <title>Anera</title>
   <style>
 p.A {
   padding-top: 50px;
@@ -17,7 +17,7 @@ p.B {
   color: #900000;
 }
 body {
-    background-color: #000000
+    background-color: #000000;
 }
 </style>
 </head>
