--- a/ANERA.html
+++ b/ANERA.html
@@ -5,16 +5,14 @@
   <style>
 p.paddingA {
   padding-top: 50px;
-  padding-right: 475px;
   padding-bottom: 25px;
-  padding-left: 475px;
+  text-align: center;
   font-size: 36px;
 }
 p.Color {
   padding-top: 25px;
-  padding-right: 475px;
+  text-align: center;
   padding-bottom: 25px;
-  padding-left: 475px;
   font-size: 14px;
   color: #ffffff;
 }
