--- a/ANERA.html
+++ b/ANERA.html
@@ -18,17 +18,15 @@ p.Color {
 }
 a.A {
   padding-top: 50px;
-  padding-right: 675px;
+  text-align: center;
   padding-bottom: 100px;
-  padding-left: 200px;
   font-size: 14px;
   color: #ffffff;
 }
 a.B {
   padding-top: 50px;
-  padding-right: 675px;
+  text-align: center;
   padding-bottom: 100px;
-  padding-left: 200px;
   font-size: 14px;
   color: #ffffff;
 }
@@ -44,9 +42,11 @@ body {
 
 <p class="Color">Anera is a land of deep hatred, dispair, and fear. Are you prepared for what you may encounter?
 
+</p>
+
 <a href='Yes.html'>  <button>Yes</button></a>
 
-<a href='No.html'">  <button>No</button></a>
-</p>
+<a href='No.html'>  <button>No</button></a>
+
 </body>
 </html>
