--- a/ANERA.html
+++ b/ANERA.html
@@ -44,9 +44,11 @@ body {
 
 </p>
 
+<p class="Color">
 <a href='Yes.html'>  <button>Yes</button></a>
 
 <a href='No.html'>  <button>No</button></a>
+</p>
 
 </body>
 </html>
