--- a/Episodes.html
+++ b/Episodes.html
@@ -1,1 +1,16 @@
+<!DOCTYPE html>
 <html>
+<head>
+  <title>Anera</title>
+  <style>
+
+body {
+  background-color: #000000;
+  color: #ffffff;
+}
+</style>
+</head>
+<body>
+
+</body>
+</html>
