--- a/Episodes.html
+++ b/Episodes.html
@@ -46,7 +46,7 @@ body {
 
 </p>
 <ul class="B">
-  <li><a href='One.html'>Season 1</a></li>
+  <li><a href='S1.html'>Season 1</a></li>
 </ul>
 </body>
 </html>
