--- a/S1.html
+++ b/S1.html
@@ -1,6 +1,52 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Anera</title>
+  <style>
 p#A {
   padding-top: 50px;
   padding-bottom: 25px;
   text-align: center;
   font-size: 46px;
 }
+ul.B {
+  display: table;
+  margin: 0px auto;
+}
+ul.B li
+{
+  list-style: none;
+  display: inline-table;
+  padding: 0;
+  float: left;
+}
+ul.B li a
+{
+  text-decoration: none;
+  padding: 30px 10px;
+  font-size: 24px;
+  color: #0000ff;
+  transition: color 1.5s;
+  -webkit-transition: color 1.5s;
+}
+ul.B li a:hover
+{
+  color: #ffffff;
+}
+body {
+  background-color: #000000;
+  color: #ffffff;
+}
+</style>
+</head>
+<body>
+<p id="A">
+
+  Anera Episodes
+
+</p>
+<ul class="B">
+  <li><a href='S1.html'>Season 1</a></li>
+</ul>
+</body>
+</html>
