--- a/Episodes.html
+++ b/Episodes.html
@@ -52,13 +52,15 @@ body {
   <li><a href='S1E4.html'>Episode 4</a></li>
   <li><a href='S1E5.html'>Episode 5</a></li>
   <li><a href='S1E6.html'>Episode 6</a></li>
+</ul>
+
+<ul class="B">
   <li><a href='S1E1.html'>Episode 7</a></li>
   <li><a href='S1E1.html'>Episode 8</a></li>
   <li><a href='S1E1.html'>Episode 9</a></li>
   <li><a href='S1E1.html'>Episode 10</a></li>
   <li><a href='S1E1.html'>Episode 11</a></li>
   <li><a href='S1E1.html'>Episode 12</a></li>
-  <li><a href='S1E1.html'>Episode 13</a></li>
 </ul>
 </body>
 </html>
