--- a/S1.html
+++ b/S1.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
   <title>Anera</title>
   <style>
 p#A {
@@ -36,6 +37,7 @@ ul.B li a:hover
 body {
   background-color: #000000;
   color: #ffffff;
+  font-family: 'Montserrat', sans-serif;
 }
 </style>
 </head>
