--- a/dollers.html
+++ b/dollers.html
@@ -3,6 +3,9 @@
 <title>Dollers</title>
 </head>
 <body>
+<script>
+var player = new Character({name: prompt("Please enter your name", ""), toughness: 10, strength: 10, intelligence: 10, agility: 10});
+</script>
 <p id="A">Dollers<p>
 </body>
 </head>
