--- a/dollars.html
+++ b/dollars.html
@@ -2,11 +2,14 @@
 <html>
 <head>
 <title>Dollers</title>
+body{
+
+}
 </head>
 <body>
 <script>
 var player = new Character({name: prompt("Please enter your name", ""), toughness: 10, strength: 10, intelligence: 10, agility: 10});
 </script>
-<p id="A">Dollers<p>
+<p id="A">Dollars<p>
 </body>
 </head>
