--- a/dollars.html
+++ b/dollars.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
+<link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
 <title>Dollers</title>
+<style>
 body{
 
 }
+</style>
 </head>
 <body>
 <script>
