--- a/dollars.html
+++ b/dollars.html
@@ -4,8 +4,10 @@
 <link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
 <title>Dollers</title>
 <style>
-body{
-
+body {
+    font-family: 'Montserrat', sans-serif;
+    background-color: #000000;
+    color: #ffffff;
 }
 </style>
 </head>
