--- a/dollars.html
+++ b/dollars.html
@@ -11,10 +11,10 @@ body {
 }
 </style>
 </head>
-<body>
 <script>
-var player = new Character({name: prompt("Please enter your name", ""), toughness: 10, strength: 10, intelligence: 10, agility: 10});
+var player = (password: prompt("Password", ""));
 </script>
+<body>
 <p id="A">Dollars<p>
 </body>
 </head>
