--- a/dollars.html
+++ b/dollars.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
-<title>Dollers</title>
+<title>Dollars</title>
 <style>
 body {
     font-family: 'Montserrat', sans-serif;
