--- a/dollars.html
+++ b/dollars.html
@@ -10,7 +10,8 @@ body {
     color: #ffffff;
 }
 p#A{
-position: fixed; top: 100px;
+position: fixed; top: 100px; text-align: center;
+
 }
 }
 </style>
