--- a/dollars.html
+++ b/dollars.html
@@ -17,7 +17,7 @@ font-size: 40px;
 </style>
 </head>
 <script>
-var player = (password: prompt("Password", ""));
+var Password = (password: prompt("Password", ""));
 </script>
 <body>
 <p id="A">Dollars<p>
