--- a/dollars.html
+++ b/dollars.html
@@ -17,10 +17,11 @@ font-size: 40px;
 }
 </style>
 </head>
-<script>
-var Password = (password: prompt("Password", ""));
-</script>
 <body>
+<svg height="100" width="100">
+  <circle cx="50" cy="50" r="40" stroke="black" stroke-width="3" fill="black" />
+  Sorry, your browser does not support inline SVG.  
+</svg> 
 <p id="A">Dollars<p>
 </body>
 </head>
