--- a/dollars.html
+++ b/dollars.html
@@ -19,7 +19,7 @@ font-size: 40px;
 </head>
 <body>
 <svg height="100" width="100">
-  <circle cx="50" cy="50" r="40" stroke="black" stroke-width="3" fill="black" />
+  <circle cx="50" cy="50" r="40" stroke="black" stroke-width="3" fill="white" />
   Sorry, your browser does not support inline SVG.  
 </svg> 
 <p id="A">Dollars<p>
