--- a/dollars.html
+++ b/dollars.html
@@ -7,7 +7,7 @@
 body {
     font-family: 'Montserrat', sans-serif;
     background-color: #000000;
-    color: white;
+    color: #F1421F;
 }
 p#A{
 padding-top: 275px;
