--- a/dollars.html
+++ b/dollars.html
@@ -7,7 +7,7 @@
 body {
     font-family: 'Montserrat', sans-serif;
     background-color: #000000;
-    color: #F1421F;
+    color: #FFFFFF;
 }
 p#A{
 padding-top: 275px;
@@ -19,7 +19,7 @@ font-size: 40px;
 </head>
 <body>
 <svg height="100" width="100">
-  <circle cx="50" cy="50" r="40" stroke="black" stroke-width="3" fill="white" />
+  <circle cx="50" cy="60" r="40" stroke="black" stroke-width="3" fill="white" />
   Sorry, your browser does not support inline SVG.  
 </svg> 
 <p id="A">Dollars<p>
