--- a/dollars.html
+++ b/dollars.html
@@ -18,7 +18,7 @@ font-size: 40px;
 </style>
 </head>
 <body>
-<svg height="10000000" width="1000000">
+<svg height="1000" width="1000">
   <circle cx="100" cy="100" r="60" stroke="black" stroke-width="3" fill="white" />
   Sorry, your browser does not support inline SVG.  
 </svg> 
