--- a/dollars.html
+++ b/dollars.html
@@ -10,8 +10,7 @@ body {
     color: #FFFFFF;
 }
 p#A{
-padding-top: -500px;
-text-align: center;
+position: fixed; top: 200px; left 250;
 font-size: 40px;
 }
 }
