--- a/dollars.html
+++ b/dollars.html
@@ -10,7 +10,7 @@ body {
     color: #FFFFFF;
 }
 p#A{
-position: fixed; top: 200px; left: 250;
+position: fixed; top: 200px; left: 250px;
 font-size: 40px;
 }
 }
