--- a/dollars.html
+++ b/dollars.html
@@ -10,8 +10,13 @@ body {
     color: #FFFFFF;
 }
 p#A{
-position: absolute; top: 300px; left: 500px;
+position: absolute;
 font-size: 40px;
+padding: 0px;
+margin-left: -139/2px;
+margin-top: -49/2px;
+top: 300px;
+left: 500px;
 }
 }
 </style>
