--- a/dollars.html
+++ b/dollars.html
@@ -13,8 +13,8 @@ p#A{
 position: absolute;
 font-size: 40px;
 padding: 0px;
-margin-left: -139/2px;
-margin-top: -49/2px;
+margin-left: -70px;
+margin-top: -25px;
 top: 300px;
 left: 500px;
 }
