--- a/dollars.html
+++ b/dollars.html
@@ -15,8 +15,8 @@ font-size: 40px;
 padding: 0px;
 margin-left: -70px;
 margin-top: -25px;
-top: 300px;
-left: 500px;
+top: 50%;
+left: 50%;
 }
 }
 </style>
