--- a/dollars.html
+++ b/dollars.html
@@ -10,6 +10,7 @@ body {
     color: #FFFFFF;
 }
 p#A{
+z-index: 5;
 position: absolute;
 font-size: 40px;
 padding: 0px;
@@ -22,8 +23,8 @@ left: 50%;
 </style>
 </head>
 <body>
-<svg height="500" width="1000">
-  <circle cx="750" cy="350" r="60" stroke="black" stroke-width="3" fill="white" />
+<svg>
+  <circle r="60" stroke="black" stroke-width="3" fill="white" />
   Sorry, your browser does not support inline SVG.  
 </svg> 
 <p id="A">Dollars<p>
