--- a/dollars.html
+++ b/dollars.html
@@ -19,7 +19,15 @@ margin-top: -25px;
 top: 50%;
 left: 50%;
 }
+
+svg{
+margin-left: -60px;
+margin-top: -60px;
+position: absolute;
+top: 50%;
+left: 50%;
 }
+
 </style>
 </head>
 <body>
