--- a/dollars.html
+++ b/dollars.html
@@ -21,8 +21,9 @@ left: 50%;
 }
 
 svg{
-margin-left: -60px;
-margin-top: -60px;
+z-index: 4;
+//margin-left: -60px;
+//margin-top: -60px;
 position: absolute;
 top: 50%;
 left: 50%;
