--- a/dollars.html
+++ b/dollars.html
@@ -33,7 +33,7 @@ left: 50%;
 </head>
 <body>
 <svg>
-  <circle r="60" stroke="black" stroke-width="3" fill="white" />
+  <circle cy="60px" cx="60px" r="60" stroke="black" stroke-width="3" fill="white" />
   Sorry, your browser does not support inline SVG.  
 </svg> 
 <p id="A">Dollars<p>
