--- a/dollars.html
+++ b/dollars.html
@@ -22,8 +22,8 @@ left: 50%;
 
 svg{
 z-index: 4;
-//margin-left: -60px;
-//margin-top: -60px;
+margin-left: -60px;
+margin-top: -60px;
 position: absolute;
 top: 50%;
 left: 50%;
