--- a/dollars.html
+++ b/dollars.html
@@ -7,7 +7,7 @@
 body {
     font-family: 'Montserrat', sans-serif;
     background-color: #000000;
-    color: #FFFFFF;
+    color: #000000;
 }
 p#A{
 z-index: 5;
