--- a/dollars.html
+++ b/dollars.html
@@ -22,6 +22,7 @@ left: 50%;
 
 svg{
 z-index: 4;
+display: table;
 margin-left: -100px;
 margin-top: -100px;
 position: absolute;
@@ -33,7 +34,7 @@ left: 50%;
 </head>
 <body>
 <svg>
-  <circle cy="100px" cx="100px" r="100" stroke="black" stroke-width="3" fill="white" />
+  <circle cy="100px" cx="100px" r="100px" stroke="black" stroke-width="3" fill="white" />
   Sorry, your browser does not support inline SVG.  
 </svg> 
 <p id="A">Dollars<p>
