--- a/dollars.html
+++ b/dollars.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
+<script src="./pass.js"></script>
 <title>Dollars</title>
 <style>
 body {
@@ -29,7 +30,6 @@ position: absolute;
 top: 35%;
 left: 50%;
 }
-
 </style>
 </head>
 <body>
@@ -37,5 +37,12 @@ left: 50%;
   <circle cy="75px" cx="75px" r="75px" stroke="black" stroke-width="3" fill="white" />
 </svg> 
 <p id="A">Dollars<p>
+<script>
+    var passwordEnt;
+    var passwordCor;
+    <button onclick="Password()">No</button>
+    var person = prompt("Password", "");
+</script>
+
 </body>
 </head>
