--- a/dollars.html
+++ b/dollars.html
@@ -21,6 +21,17 @@ top: 35%;
 left: 50%;
 }
 
+p#A{
+z-index: 5;
+position: absolute;
+font-size: 40px;
+padding: 0px;
+margin-left: -70px;
+margin-top: -25px;
+top: 50%;
+left: 50%;
+}
+
 svg{
 z-index: 4;
 display: table;
@@ -37,12 +48,14 @@ left: 50%;
   <circle cy="75px" cx="75px" r="75px" stroke="black" stroke-width="3" fill="white" />
 </svg> 
 <p id="A">Dollars<p>
+
+<p id="B">
 <script>
     var passwordEnt;
     var passwordCor;
-    <button onclick="Password()">No</button>
+    <button onclick="Password()">Password</button>
     var person = prompt("Password", "");
 </script>
-
+</p>
 </body>
 </head>
