--- a/dollars.html
+++ b/dollars.html
@@ -48,11 +48,12 @@ left: 50%;
   <circle cy="75px" cx="75px" r="75px" stroke="black" stroke-width="3" fill="white" />
 </svg> 
 <p id="A">Dollars<p>
-
+<script>
+while(person != $ra11oD){
 <p id="B">
-
     <button onclick="Password()">Password</button>
-    
 </p>
+}
+</script>
 </body>
 </head>
