--- a/dollars.html
+++ b/dollars.html
@@ -31,6 +31,16 @@ margin-top: -25px;
 top: 50%;
 left: 50%;
 }
+p#C{
+z-index: 5;
+position: absolute;
+font-size: 40px;
+padding: 0px;
+margin-left: -45px;
+margin-top: -25px;
+top: 50%;
+left: 50%;
+}
 
 svg{
 z-index: 4;
@@ -48,13 +58,20 @@ left: 50%;
   <circle cy="75px" cx="75px" r="75px" stroke="black" stroke-width="3" fill="white" />
 </svg> 
 <p id="A">Dollars<p>
-<script>
-while(person != $ra11oD){
+
 <p id="B">
     <button onclick="Password()">Password</button>
 </p>
+
+<script>
+if (person == $ra11oD){
+    document.getElementById("C").innerHTML = "Hello JavaScript";
+}
+
+ if(person != $ra11oD){
+    
 }
 </script>
-Help
+
 </body>
 </head>
