--- a/dollars.html
+++ b/dollars.html
@@ -64,13 +64,9 @@ left: 50%;
 </p>
 
 <script>
-if (person == $ra11oD){
-    document.getElementById("C").innerHTML = "Hello JavaScript";
-}
-
- if(person != $ra11oD){
-    
-}
+    if (person == $ra11oD){
+        <a href='DoLLarS.html'>  <button>Continue</button></a>
+    }
 </script>
 
 </body>
