--- a/SVGEXP.html
+++ b/SVGEXP.html
@@ -42,7 +42,7 @@ top: 50%;
 left: 50%;
 }
 
-svg{
+svg#C{
 z-index: 4;
 display: table;
 margin-left: -75px;
@@ -51,12 +51,28 @@ position: absolute;
 top: 35%;
 left: 50%;
 }
+
+svg#R{
+z-index: 4;
+display: table;
+margin-left: -75px;
+margin-top: -75px;
+position: absolute;
+top: 75%;
+left: 50%;
+}
+
 </style>
 </head>
 <body>
-<svg>
+<svg id="C">
   <circle cy="75px" cx="75px" r="75px" stroke="black" stroke-width="3" fill="white" />
 </svg> 
+
+<svg id="R">
+  <rect width="300px" height="100px" style="fill:rgb(0,0,255);stroke-width:3;stroke:rgb(0,255,0)" />
+</svg>
+
 <p id="A">Dollars<p>
 
 <p id="B">
