--- a/SVGEXP.html
+++ b/SVGEXP.html
@@ -52,11 +52,21 @@ top: 35%;
 left: 50%;
 }
 
-svg#R{
+svg#RA{
 z-index: 4;
 display: table;
-margin-left: -75px;
-margin-top: -75px;
+margin-left: -200px;
+margin-top: -25px;
+position: absolute;
+top: 75%;
+left: 50%;
+}
+
+svg#RB{
+z-index: 4;
+display: table;
+margin-left: -100px;
+margin-top: -12.5px;
 position: absolute;
 top: 75%;
 left: 50%;
@@ -69,8 +79,12 @@ left: 50%;
   <circle cy="75px" cx="75px" r="75px" stroke="black" stroke-width="3" fill="white" />
 </svg> 
 
-<svg id="R">
-  <rect width="300px" height="100px" style="fill:rgb(0,0,255);stroke-width:3;stroke:rgb(0,255,0)" />
+<svg id="RA">
+  <rect width="400px" height="50px" style="fill:rgb(255,255,255);stroke-width:3;stroke:rgb(0,0,0)" />
+</svg>
+
+<svg id="RB">
+  <rect width="200px" height="25px" style="fill:rgb(0,0,0);stroke-width:3;stroke:rgb(0,0,0)" />
 </svg>
 
 <p id="A">Dollars<p>
