--- a/index.html
+++ b/index.html
@@ -34,6 +34,17 @@ ul.B li a:hover
 {
   color: #ffffff;
 }
+
+svg#CA{
+z-index: 4;
+display: table;
+margin-left: -75px;
+margin-top: -75px;
+position: absolute;
+top: 75%;
+left: 50%;
+}
+
 body {
     font-family: 'Montserrat', sans-serif;
     font-size: 22px;
@@ -55,5 +66,10 @@ body {
   <li><a href='Contacts.html'>Contact</a></li>
   <li><a href='Store.html'>Store</a></li>
 </ul>
+
+<svg id="C">
+  <circle cy="75px" cx="75px" r="75px" stroke="black" stroke-width="3" fill="white" />
+</svg> 
+
 </body>
 </html>
