--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ body {
   <li><a href='Store.html'>Store</a></li>
 </ul>
 
-<svg id="C">
+<svg id="CA">
   <circle cy="75px" cx="75px" r="75px" stroke="black" stroke-width="3" fill="white" />
 </svg> 
 
