--- a/index.html
+++ b/index.html
@@ -36,10 +36,20 @@ ul.B li a:hover
 }
 
 svg#CA{
-z-index: 4;
+z-index: 3;
 display: table;
 margin-left: -75px;
 margin-top: -75px;
+position: absolute;
+top: 75%;
+left: 50%;
+}
+
+svg#CB{
+z-index: 4;
+display: table;
+margin-left: -50px;
+margin-top: -50px;
 position: absolute;
 top: 75%;
 left: 50%;
@@ -69,6 +79,10 @@ body {
 
 <svg id="CA">
   <circle cy="75px" cx="75px" r="75px" stroke="black" stroke-width="3" fill="white" />
+</svg> 
+
+<svg id="CA">
+  <circle cy="50px" cx="50px" r="50px" stroke="white" stroke-width="3" fill="black" />
 </svg> 
 
 </body>
