--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ body {
   <circle cy="75px" cx="75px" r="75px" stroke="black" stroke-width="3" fill="white" />
 </svg> 
 
-<svg id="CA">
+<svg id="CB">
   <circle cy="50px" cx="50px" r="50px" stroke="white" stroke-width="3" fill="black" />
 </svg> 
 
