--- a/index.html
+++ b/index.html
@@ -85,5 +85,13 @@ body {
   <circle cy="50px" cx="50px" r="50px" stroke="white" stroke-width="3" fill="black" />
 </svg> 
 
+<svg id="CB">
+    <clipPath id="circle">
+      <circle cx="100" cy="100" r="50" />
+    </clipPath>
+
+    <image x="25" y="25" xlink:href="http://placehold.it/150.png" height="150" width="150" clip-path="url(#circle)" ></image>
+  </svg>
+  
 </body>
 </html>
