--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ body {
       <circle cx="50" cy="50" r="50" />
     </clipPath>
 
-    <image x="-25" y="-25" xlink:href="http://s5.postimg.org/jl4gnzuxj/HP_Bar_Health_Lost_1.png" height="150" width="150" clip-path="url(#circle)" ></image>
+    <image x="-25" y="-25" xlink:href="http://upload.wikimedia.org/wikipedia/commons/b/bf/GOES-13_First_Image_jun_22_2006_1730Z.jpg" height="150" width="150" clip-path="url(#circle)" ></image>
   </svg>
   
 </body>
