--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ body {
       <circle cx="50" cy="50" r="50" />
     </clipPath>
 
-    <image x="-25" y="-25" xlink:href="http://upload.wikimedia.org/wikipedia/commons/b/bf/GOES-13_First_Image_jun_22_2006_1730Z.jpg" height="150" width="150" clip-path="url(#circle)" ></image>
+    <image x="-25" y="-25" xlink:href="https://s3.amazonaws.com/ksr/avatars/2069647/THECat-100x100.small.jpg?1329827551" height="150" width="150" clip-path="url(#circle)" ></image>
   </svg>
   
 </body>
