--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ body {
 </svg> 
 
 <svg id="CB">
-  <circle cy="50px" cx="50px" r="50px" stroke="white" stroke-width="3" fill="black" />
+  <circle cy="50px" cx="50px" r="50px" stroke="black" stroke-width="3" fill="black" />
 </svg> 
 
 <svg id="CB">
