--- a/index.html
+++ b/index.html
@@ -48,6 +48,16 @@ left: 50%;
 svg#CB{
 z-index: 4;
 display: table;
+margin-left: -55px;
+margin-top: -55px;
+position: absolute;
+top: 75%;
+left: 50%;
+}
+
+svg#CC{
+z-index: 4;
+display: table;
 margin-left: -50px;
 margin-top: -50px;
 position: absolute;
@@ -82,10 +92,10 @@ body {
 </svg> 
 
 <svg id="CB">
-  <circle cy="50px" cx="50px" r="50px" stroke="black" stroke-width="3" fill="black" />
+  <circle cy="55px" cx="55px" r="55px" stroke="white" stroke-width="3" fill="black" />
 </svg> 
 
-<svg id="CB">
+<svg id="CC">
     <clipPath id="circle">
       <circle cx="50" cy="50" r="50" />
     </clipPath>
