--- a/game.html
+++ b/game.html
@@ -24,13 +24,13 @@ body {
 <body>
 <p class="A">
 
-  <marquee>Welcome to Anera, prepare to survive!</marquee>
+  <marquee>Under construction</marquee>
 
 </p>
 
 <p class="B">
 
-  <a href='ANERA.html'>  <button>Enter Anera</button></a>
+  <a href=''>  <button>Enter Anera</button></a>
 
 </p>
 </body>
