--- a/game.html
+++ b/game.html
@@ -9,7 +9,7 @@ p.A {
   padding-bottom: 25px;
   padding-left: 500px;
   font-size: 40px;
-  color: #999999;
+  color: #ffff00;
 }
 p.B {
   padding-top: 50px;
