--- a/game.html
+++ b/game.html
@@ -4,7 +4,7 @@
   <title>Anera</title>
   <style>
 p.A {
-  padding-top: 50px;
+  padding-top: 10%;
   padding-right: 500px;
   padding-bottom: 25px;
   padding-left: 500px;
@@ -13,7 +13,7 @@ p.A {
 }
 p.B {
   padding-top: 50px;
-  padding-left: 650px;
+  padding-left: 50%px;
   color: #900000;
 }
 body {
