--- a/game.html
+++ b/game.html
@@ -5,15 +5,15 @@
   <style>
 p.A {
   padding-top: 10%;
-  padding-right: 500px;
-  padding-bottom: 25px;
-  padding-left: 500px;
+  padding-right: 10%;
+  padding-bottom: 5%;
+  padding-left: 10%;
   font-size: 40px;
   color: #ffff00;
 }
 p.B {
-  padding-top: 50px;
-  padding-left: 50%px;
+  padding-top: 5%;
+  padding-left: 50%;
   color: #900000;
 }
 body {
