--- a/Contacts.html
+++ b/Contacts.html
@@ -39,16 +39,14 @@ body {
     Email:aden_xin@gmail.com
 </p>
 
-<p id="A">    Eerie Wolf
-</p>
-<p id="B">
-    Email: We could not locate this...
-</p>
-
 <p id="A">    James Gold
-    anerianjames@gmail.com
-
 </p>
+
+<p id="B">
+    Email:anerianjames@gmail.com
+</p>
+
+
 
 </body>
 </html>
