--- a/Name.html
+++ b/Name.html
@@ -20,6 +20,7 @@ body {
 </style>
 </head>
 <body>
+<script>
 var name = prompt("What is your name?", "");
 <script>
 document.getElementById("name");
