--- a/Name.html
+++ b/Name.html
@@ -21,9 +21,11 @@ body {
 </head>
 <body>
 <script>
+
 var name = prompt("What is your name?", "");
-<script>
+
 document.getElementById("name");
+
 </script>
 </body>
--</html>
+</html>
