--- a/Name.html
+++ b/Name.html
@@ -6,7 +6,7 @@ int name = "ABCD";
 </script>
   <title>NAME</title>
   <style>
-p.padding {
+p.name {
   padding-top: 50px;
   padding-right: 100px;
   padding-bottom: 25px;
@@ -24,7 +24,7 @@ body {
 
 var name = prompt("What is your name?", "");
 
-document.getElementById("name");
+document.getElementById("name").innerHTML = name;
 
 </script>
 </body>
