--- a/Name.html
+++ b/Name.html
@@ -6,7 +6,7 @@ int name = "ABCD";
 </script>
   <title>NAME</title>
   <style>
-p.name {
+p#name {
   padding-top: 50px;
   padding-right: 100px;
   padding-bottom: 25px;
