--- a/Name.html
+++ b/Name.html
@@ -27,5 +27,8 @@ var name = prompt("What is your name?", "");
 document.getElementById("name").innerHTML = name;
 
 </script>
+
+<p id="name"></p>
+
 </body>
 </html>
