--- a/Store.html
+++ b/Store.html
@@ -1,8 +1,8 @@
 <html>
 <body>
 <video width="320" height="240" controls>
-  <source src="movie.mp4" type="video/mp4">
-  <source src="movie.ogg" type="video/ogg">
+  <source src="www.youtube.com/watch?v=VufDd-QL1c0" type="video/mp4">
+  <source src="www.youtube.com/watch?v=VufDd-QL1c0" type="video/ogg">
   Your browser does not support the video tag.
 </video>
 </body>
