--- a/Store.html
+++ b/Store.html
@@ -1,9 +1,5 @@
 <html>
 <body>
-<video width="320" height="240" controls>
-  <source src="www.youtube.com/watch?v=VufDd-QL1c0" type="video/mp4">
-  <source src="www.youtube.com/watch?v=VufDd-QL1c0" type="video/ogg">
-  Your browser does not support the video tag.
-</video>
+<iframe width="854" height="510" src="https://www.youtube.com/embed/VufDd-QL1c0" frameborder="0" allowfullscreen></iframe>
 </body>
 </html
