--- a/Seasons.html
+++ b/Seasons.html
@@ -48,12 +48,12 @@ body {
 
 </p>
 <ul class="B">
-  <li><a href='S1Episodes.html'>Episode 1</a></li>
-\\  <li><a href='S2Episodes.html'>Episode 2</a></li>
-\\  <li><a href='S3Episodes.html'>Episode 3</a></li>
-\\  <li><a href='S4Episodes.html'>Episode 4</a></li>
-\\  <li><a href='S5Episodes.html'>Episode 5</a></li>
-\\  <li><a href='S6Episodes.html'>Episode 6</a></li>
+  <li><a href='S1Episodes.html'>Season 1</a></li>
+  <li><a href='S2Episodes.html'></a></li>
+  <li><a href='S3Episodes.html'></a></li>
+  <li><a href='S4Episodes.html'></a></li>
+  <li><a href='S5Episodes.html'></a></li>
+  <li><a href='S6Episodes.html'></a></li>
 </ul>
 </body>
 </html>
