--- a/S1Episodes.html
+++ b/S1Episodes.html
@@ -49,20 +49,20 @@ body {
 </p>
 <ul class="B">
   <li><a href='S1E1.html'>Episode 1</a></li>
-  <li><a href='S1E2.html'>Episode 2</a></li>
-  <li><a href='S1E3.html'>Episode 3</a></li>
-  <li><a href='S1E4.html'>Episode 4</a></li>
-  <li><a href='S1E5.html'>Episode 5</a></li>
-  <li><a href='S1E6.html'>Episode 6</a></li>
+  <li><a href='S1E2.html'></a></li>
+  <li><a href='S1E3.html'></a></li>
+  <li><a href='S1E4.html'></a></li>
+  <li><a href='S1E5.html'></a></li>
+  <li><a href='S1E6.html'></a></li>
 </ul>
 
 <ul class="B">
-  <li><a href='S1E1.html'>Episode 7</a></li>
-  <li><a href='S1E1.html'>Episode 8</a></li>
-  <li><a href='S1E1.html'>Episode 9</a></li>
-  <li><a href='S1E1.html'>Episode 10</a></li>
-  <li><a href='S1E1.html'>Episode 11</a></li>
-  <li><a href='S1E1.html'>Episode 12</a></li>
+  <li><a href='S1E1.html'></a></li>
+  <li><a href='S1E1.html'></a></li>
+  <li><a href='S1E1.html'></a></li>
+  <li><a href='S1E1.html'></a></li>
+  <li><a href='S1E1.html'></a></li>
+  <li><a href='S1E1.html'></a></li>
 </ul>
 </body>
 </html>
