--- a/Tabs-Exp.html
+++ b/Tabs-Exp.html
@@ -2,24 +2,27 @@
 
 <title>Anera</title>
 
-<style type="text/css">
-     body { font-size: 80%; font-family: 'Lucida Grande', Verdana, Arial, Sans-Serif; }
-     ul#tabs { list-style-type: none; margin: 30px 0 0 0; padding: 0 0 0.3em 0; }
-     ul#tabs li { display: inline; }
-     ul#tabs li a { color: #42454a; background-color: #dedbde; border: 1px solid #c9c3ba; border-bottom: none; padding: 0.3em; text-decoration: none; }
-     ul#tabs li a:hover { background-color: #f1f0ee; }
-     ul#tabs li a.selected { color: #000; background-color: #f1f0ee; font-weight: bold; padding: 0.7em 0.3em 0.38em 0.3em; }
-     div.tabContent { border: 1px solid #c9c3ba; padding: 0.5em; background-color: #f1f0ee; }
-     div.tabContent.hide { display: none; }
+<style>
+ul.B {
+  display: table;
+  margin: 128px auto;
+}
+body { font-size: 80%; font-family: 'Lucida Grande', Verdana, Arial, Sans-Serif; }
+ul#tabs { list-style-type: none; margin: 30px 0 0 0; padding: 0 0 0.3em 0; }
+ul#tabs li { display: inline; }
+ul#tabs li a { color: #42454a; background-color: #dedbde; border: 1px solid #c9c3ba; border-bottom: none; padding: 0.3em; text-decoration: none; }
+ul#tabs li a:hover { background-color: #f1f0ee; }
+ul#tabs li a.selected { color: #000; background-color: #f1f0ee; font-weight: bold; padding: 0.7em 0.3em 0.38em 0.3em; }
+div.tabContent { border: 1px solid #c9c3ba; padding: 0.5em; background-color: #f1f0ee; }
+div.tabContent.hide { display: none; }
 </style>
 
 <script>
 
-    var tabLinks = new Array();
-    var contentDivs = new Array();
+var tabLinks = new Array();
+var contentDivs = new Array();
 
-    function init() {
-
+function init() {
 
   var tabListItems = document.getElementById('tabs').childNodes;
   for ( var i = 0; i < tabListItems.length; i++ ) {
