--- a/Tabs-Exp.html
+++ b/Tabs-Exp.html
@@ -35,9 +35,9 @@ body {
 ul#tabs { list-style-type: none; margin: 30px 0 0 0; padding: 0 0 0.3em 0; }
 ul#tabs li { display: inline; }
 ul#tabs li a { color: #42454a; background-color: #404040; border: 1px solid #c9c3ba; border-bottom: none; padding: 0.3em; text-decoration: none; }
-ul#tabs li a:hover { background-color: #404040; }
-ul#tabs li a.selected { color: #000; background-color: #404040; font-weight: bold; padding: 0.7em 0.3em 0.38em 0.3em; }
-div.tabContent { border: 1px solid #c9c3ba; padding: 0.5em; background-color: #404040; }
+ul#tabs li a:hover { background-color: #ff4040; }
+ul#tabs li a.selected { color: #000; background-color: #40ff40; font-weight: bold; padding: 0.7em 0.3em 0.38em 0.3em; }
+div.tabContent { border: 1px solid #c9c3ba; padding: 0.5em; background-color: #4040ff; }
 div.tabContent.hide { display: none; }
 </style>
 
