--- a/Tabs-Exp.html
+++ b/Tabs-Exp.html
@@ -34,9 +34,9 @@ body {
 }
 ul#tabs { list-style-type: none; margin: 30px 0 0 0; padding: 0 0 0.3em 0; }
 ul#tabs li { display: inline; }
-ul#tabs li a { color: #42454a; background-color: #101010; border: 1px solid #c9c3ba; border-bottom: none; padding: 0.3em; text-decoration: none; }
+ul#tabs li a { color: #42454a; background-color: #101010; border: 1px solid #101010; border-bottom: none; padding: 0.3em; text-decoration: none; }
 ul#tabs li a:hover { background-color: #9f9f9a; }
-ul#tabs li a.selected { color: #000; background-color: #40ff40; font-weight: bold; padding: 0.7em 0.3em 0.38em 0.3em; }
+ul#tabs li a.selected { color: #000; background-color: #0000ff; font-weight: bold; padding: 0.7em 0.3em 0.38em 0.3em; }
 div.tabContent { border: 1px solid #c9c3ba; padding: 0.5em; background-color: #101010; }
 div.tabContent.hide { display: none; }
 </style>
@@ -106,7 +106,7 @@ function getHash( url ) {
 </script>
   </head>
   <body onload="init()">
-<h1>JavaScript tabs example</h1>
+<h1>Anera</h1>
 
 <ul id="tabs">
   <li><a href="#Sone">Season 1</a></li>
@@ -137,21 +137,51 @@ function getHash( url ) {
 </div>
 
 <div class="tabContent" id="Stwo">
-  <h2>Advantages of tabs</h2>
   <div>
-    <p>JavaScript tabs are great if your Web page contains a large amount of content.</p>
-    <p>They're also good for things like multi-step Web forms.</p>
+    <div>
+    <ul class="B">
+  <li><a href='S1E1.html'>Episode 1</a></li>
+  <li><a href='S1E2.html'>Episode 2</a></li>
+  <li><a href='S1E3.html'>Episode 3</a></li>
+  <li><a href='S1E4.html'>Episode 4</a></li>
+  <li><a href='S1E5.html'>Episode 5</a></li>
+  <li><a href='S1E6.html'>Episode 6</a></li>
+</ul>
+
+<ul class="B">
+  <li><a href='S1E1.html'>Episode 7</a></li>
+  <li><a href='S1E1.html'>Episode 8</a></li>
+  <li><a href='S1E1.html'>Episode 9</a></li>
+  <li><a href='S1E1.html'>Episode 10</a></li>
+  <li><a href='S1E1.html'>Episode 11</a></li>
+  <li><a href='S1E1.html'>Episode 12</a></li>
+</ul>
   </div>
 </div>
 
 <div class="tabContent" id="Sthree">
-  <h2>Using tabs</h2>
+  <div>
+    <ul class="B">
+  <li><a href='S1E1.html'>Episode 1</a></li>
+  <li><a href='S1E2.html'>Episode 2</a></li>
+  <li><a href='S1E3.html'>Episode 3</a></li>
+  <li><a href='S1E4.html'>Episode 4</a></li>
+  <li><a href='S1E5.html'>Episode 5</a></li>
+  <li><a href='S1E6.html'>Episode 6</a></li>
+</ul>
+
+<ul class="B">
+  <li><a href='S1E1.html'>Episode 7</a></li>
+  <li><a href='S1E1.html'>Episode 8</a></li>
+  <li><a href='S1E1.html'>Episode 9</a></li>
+  <li><a href='S1E1.html'>Episode 10</a></li>
+  <li><a href='S1E1.html'>Episode 11</a></li>
+  <li><a href='S1E1.html'>Episode 12</a></li>
+</ul>
   <div>
     <p>Click a tab to view the tab's content. Using tabs couldn't be easier!</p>
   </div>
 </div>
-
-<p><a href="/articles/javascript-tabs/">Return to the JavaScript Tabs article</a></p>
 
   </body>
 </html>
