--- a/Tabs-Exp.html
+++ b/Tabs-Exp.html
@@ -112,6 +112,7 @@ function getHash( url ) {
   <li><a href="#Sone">Season 1</a></li>
   <li><a href="#Stwo">Season 2</a></li>
   <li><a href="#Sthree">Season 3</a></li>
+  <li><a href="#Sfour"></a></li>
 </ul>
 
 <div class="tabContent" id="Sone">
@@ -160,6 +161,29 @@ function getHash( url ) {
 </div>
 
 <div class="tabContent" id="Sthree">
+  <div>
+    <div>
+    <ul class="B">
+  <li><a href='S1E1.html'>Episode 1</a></li>
+  <li><a href='S1E2.html'>Episode 2</a></li>
+  <li><a href='S1E3.html'>Episode 3</a></li>
+  <li><a href='S1E4.html'>Episode 4</a></li>
+  <li><a href='S1E5.html'>Episode 5</a></li>
+  <li><a href='S1E6.html'>Episode 6</a></li>
+</ul>
+
+<ul class="B">
+  <li><a href='S1E1.html'>Episode 7</a></li>
+  <li><a href='S1E1.html'>Episode 8</a></li>
+  <li><a href='S1E1.html'>Episode 9</a></li>
+  <li><a href='S1E1.html'>Episode 10</a></li>
+  <li><a href='S1E1.html'>Episode 11</a></li>
+  <li><a href='S1E1.html'>Episode 12</a></li>
+</ul>
+  </div>
+</div>
+
+<div class="tabContent" id="Sfour">
   <div>
     <div>
     <ul class="B">
