--- a/Tabs-Exp.html
+++ b/Tabs-Exp.html
@@ -112,7 +112,7 @@ function getHash( url ) {
   <li><a href="#Sone">Season 1</a></li>
   <li><a href="#Stwo">Season 2</a></li>
   <li><a href="#Sthree">Season 3</a></li>
-  <li><a href="#Sfour"></a></li>
+  <li><a href="#Sfour">Season 4</a></li>
 </ul>
 
 <div class="tabContent" id="Sone">
@@ -127,12 +127,12 @@ function getHash( url ) {
 </ul>
 
 <ul class="B">
-  <li><a href='S1E1.html'>Episode 7</a></li>
-  <li><a href='S1E1.html'>Episode 8</a></li>
-  <li><a href='S1E1.html'>Episode 9</a></li>
-  <li><a href='S1E1.html'>Episode 10</a></li>
-  <li><a href='S1E1.html'>Episode 11</a></li>
-  <li><a href='S1E1.html'>Episode 12</a></li>
+  <li><a href='S1E7.html'>Episode 7</a></li>
+  <li><a href='S1E8.html'>Episode 8</a></li>
+  <li><a href='S1E9.html'>Episode 9</a></li>
+  <li><a href='S1E10.html'>Episode 10</a></li>
+  <li><a href='S1E11.html'>Episode 11</a></li>
+  <li><a href='S1E12.html'>Episode 12</a></li>
 </ul>
   </div>
 </div>
@@ -140,21 +140,21 @@ function getHash( url ) {
 <div class="tabContent" id="Stwo">
   <div>
     <ul class="B">
-  <li><a href='S1E1.html'>Episode 1</a></li>
-  <li><a href='S1E2.html'>Episode 2</a></li>
-  <li><a href='S1E3.html'>Episode 3</a></li>
-  <li><a href='S1E4.html'>Episode 4</a></li>
-  <li><a href='S1E5.html'>Episode 5</a></li>
-  <li><a href='S1E6.html'>Episode 6</a></li>
+  <li><a href='S2E1.html'>Episode 1</a></li>
+  <li><a href='S2E2.html'>Episode 2</a></li>
+  <li><a href='S2E3.html'>Episode 3</a></li>
+  <li><a href='S2E4.html'>Episode 4</a></li>
+  <li><a href='S2E5.html'>Episode 5</a></li>
+  <li><a href='S2E6.html'>Episode 6</a></li>
 </ul>
 
 <ul class="B">
-  <li><a href='S1E1.html'>Episode 7</a></li>
-  <li><a href='S1E1.html'>Episode 8</a></li>
-  <li><a href='S1E1.html'>Episode 9</a></li>
-  <li><a href='S1E1.html'>Episode 10</a></li>
-  <li><a href='S1E1.html'>Episode 11</a></li>
-  <li><a href='S1E1.html'>Episode 12</a></li>
+  <li><a href='S2E7.html'>Episode 7</a></li>
+  <li><a href='S2E8.html'>Episode 8</a></li>
+  <li><a href='S2E9.html'>Episode 9</a></li>
+  <li><a href='S2E10.html'>Episode 10</a></li>
+  <li><a href='S2E11.html'>Episode 11</a></li>
+  <li><a href='S2E12.html'>Episode 12</a></li>
 </ul>
   </div>
 </div>
@@ -162,21 +162,21 @@ function getHash( url ) {
 <div class="tabContent" id="Sthree">
   <div>
     <ul class="B">
-  <li><a href='S1E1.html'>Episode 1</a></li>
-  <li><a href='S1E2.html'>Episode 2</a></li>
-  <li><a href='S1E3.html'>Episode 3</a></li>
-  <li><a href='S1E4.html'>Episode 4</a></li>
-  <li><a href='S1E5.html'>Episode 5</a></li>
-  <li><a href='S1E6.html'>Episode 6</a></li>
+  <li><a href='S3E1.html'>Episode 1</a></li>
+  <li><a href='S3E2.html'>Episode 2</a></li>
+  <li><a href='S3E3.html'>Episode 3</a></li>
+  <li><a href='S3E4.html'>Episode 4</a></li>
+  <li><a href='S3E5.html'>Episode 5</a></li>
+  <li><a href='S3E6.html'>Episode 6</a></li>
 </ul>
 
 <ul class="B">
-  <li><a href='S1E1.html'>Episode 7</a></li>
-  <li><a href='S1E1.html'>Episode 8</a></li>
-  <li><a href='S1E1.html'>Episode 9</a></li>
-  <li><a href='S1E1.html'>Episode 10</a></li>
-  <li><a href='S1E1.html'>Episode 11</a></li>
-  <li><a href='S1E1.html'>Episode 12</a></li>
+  <li><a href='S3E7.html'>Episode 7</a></li>
+  <li><a href='S3E8.html'>Episode 8</a></li>
+  <li><a href='S3E9.html'>Episode 9</a></li>
+  <li><a href='S3E10.html'>Episode 10</a></li>
+  <li><a href='S3E11.html'>Episode 11</a></li>
+  <li><a href='S3E12.html'>Episode 12</a></li>
 </ul>
   </div>
 </div>
@@ -184,21 +184,21 @@ function getHash( url ) {
 <div class="tabContent" id="Sfour">
   <div>
     <ul class="B">
-  <li><a href='S1E1.html'>Episode 1</a></li>
-  <li><a href='S1E2.html'>Episode 2</a></li>
-  <li><a href='S1E3.html'>Episode 3</a></li>
-  <li><a href='S1E4.html'>Episode 4</a></li>
-  <li><a href='S1E5.html'>Episode 5</a></li>
-  <li><a href='S1E6.html'>Episode 6</a></li>
+  <li><a href='S4E1.html'>Episode 1</a></li>
+  <li><a href='S4E2.html'>Episode 2</a></li>
+  <li><a href='S4E3.html'>Episode 3</a></li>
+  <li><a href='S4E4.html'>Episode 4</a></li>
+  <li><a href='S4E5.html'>Episode 5</a></li>
+  <li><a href='S4E6.html'>Episode 6</a></li>
 </ul>
 
 <ul class="B">
-  <li><a href='S1E1.html'>Episode 7</a></li>
-  <li><a href='S1E1.html'>Episode 8</a></li>
-  <li><a href='S1E1.html'>Episode 9</a></li>
-  <li><a href='S1E1.html'>Episode 10</a></li>
-  <li><a href='S1E1.html'>Episode 11</a></li>
-  <li><a href='S1E1.html'>Episode 12</a></li>
+  <li><a href='S4E7.html'>Episode 7</a></li>
+  <li><a href='S4E8.html'>Episode 8</a></li>
+  <li><a href='S4E9.html'>Episode 9</a></li>
+  <li><a href='S4E10.html'>Episode 10</a></li>
+  <li><a href='S4E11.html'>Episode 11</a></li>
+  <li><a href='S4E12.html'>Episode 12</a></li>
 </ul>
   </div>
 </div>
