--- a/Store.html
+++ b/Store.html
@@ -2,4 +2,4 @@
 <body>
 <iframe width="854" height="510" src="https://www.youtube.com/embed/VufDd-QL1c0" frameborder="0" allowfullscreen></iframe>
 </body>
-</html
+</html>
