--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ body {
 
 <ul class="B">
   <li><a href='game.html'>Game</a></li>
-  <li><a href='Seasons.html'>Episodes</a></li>
+  <li><a href='Anera.html'>Episodes</a></li>
   <li><a href='Contacts.html'>Contact</a></li>
   <li><a href='Store.html'>Store</a></li>
 </ul>
