--- a/Anera.html
+++ b/Anera.html
@@ -113,6 +113,8 @@ function getHash( url ) {
   <li><a href="#Stwo">Season 2</a></li>
   <li><a href="#Sthree">Season 3</a></li>
   <li><a href="#Sfour">Season 4</a></li>
+  <li><a href="#Misc">Other Videos</a></li>
+  <li><a href="#Gaming">Gaming</a></li>
 </ul>
 
 <div class="tabContent" id="Sone">
@@ -200,6 +202,21 @@ function getHash( url ) {
   <li><a href='S4E11.html'>Episode 11</a></li>
   <li><a href='S4E12.html'>Episode 12</a></li>
 </ul>
+  </div>
+</div>
+
+<div class="tabContent" id="Misc">
+  <div>
+    <ul class="B">
+  <li><a href='Misc1.html'>E</a></li>
+</ul>
+
+<div class="tabContent" id="Gaming">
+  <div>
+    <ul class="B">
+  <li><a href='Game1.html'>E</a></li>
+</ul>
+
   </div>
 </div>
 
