--- a/Anera.html
+++ b/Anera.html
@@ -210,13 +210,14 @@ function getHash( url ) {
     <ul class="B">
   <li><a href='Misc1.html'>E</a></li>
 </ul>
+  </div>
+</div>
 
 <div class="tabContent" id="Gaming">
   <div>
     <ul class="B">
   <li><a href='Game1.html'>E</a></li>
 </ul>
-
   </div>
 </div>
 
