--- a/Anera.html
+++ b/Anera.html
@@ -3,6 +3,12 @@
 <title>Anera</title>
 
 <style>
+p#A {
+  padding-top: 50px;
+  padding-bottom: 25px;
+  text-align: center;
+  font-size: 46px;
+}
 ul.B {
   display: table;
   margin: 128px auto;
@@ -118,6 +124,11 @@ function getHash( url ) {
 </ul>
 
 <div class="tabContent" id="Sone">
+<p id="A">
+
+  Season 1
+
+</p>
   <div>
     <ul class="B">
   <li><a href='S1E1.html'>Episode 1</a></li>
@@ -140,6 +151,11 @@ function getHash( url ) {
 </div>
 
 <div class="tabContent" id="Stwo">
+<p id="A">
+
+  Season 2
+
+</p>
   <div>
     <ul class="B">
   <li><a href='S2E1.html'>Episode 1</a></li>
@@ -162,6 +178,11 @@ function getHash( url ) {
 </div>
 
 <div class="tabContent" id="Sthree">
+<p id="A">
+
+  Season 3
+
+</p>
   <div>
     <ul class="B">
   <li><a href='S3E1.html'>Episode 1</a></li>
@@ -184,6 +205,11 @@ function getHash( url ) {
 </div>
 
 <div class="tabContent" id="Sfour">
+<p id="A">
+
+  Season 4
+
+</p>
   <div>
     <ul class="B">
   <li><a href='S4E1.html'>Episode 1</a></li>
