--- a/Anera.html
+++ b/Anera.html
@@ -4,7 +4,7 @@
 
 <style>
 p#A {
-  padding-top: 50px;
+  padding-top: 10px;
   padding-bottom: 25px;
   text-align: center;
   font-size: 46px;
@@ -112,7 +112,7 @@ function getHash( url ) {
 </script>
   </head>
   <body onload="init()">
-<h1>Anera</h1>
+<p id="A">Anera</p>
 
 <ul id="tabs">
   <li><a href="#Sone">Season 1</a></li>
@@ -232,6 +232,11 @@ function getHash( url ) {
 </div>
 
 <div class="tabContent" id="Misc">
+<p id="A">
+
+  Other
+
+</p>
   <div>
     <ul class="B">
   <li><a href='Misc1.html'>E</a></li>
@@ -240,6 +245,11 @@ function getHash( url ) {
 </div>
 
 <div class="tabContent" id="Gaming">
+<p id="A">
+
+  Gaming
+
+</p>
   <div>
     <ul class="B">
   <li><a href='Game1.html'>E</a></li>
