--- a/game.html
+++ b/game.html
@@ -15,6 +15,12 @@ p.B {
   padding-left: 50%;
   color: #900000;
 }
+
+p.B {
+  padding-left: 50%;
+  color: #900000;
+}
+
 body {
     background-color: #000000;
 }
@@ -23,8 +29,14 @@ body {
 <body>
 <p class="A">
 
-  <marquee>Under construction</marquee>
+  <marquee>Anera</marquee>
 
+</p>
+
+<p class="C">
+  
+  Watch out while entering anera, it is a world full of anger, hate, and fear.
+  
 </p>
 
 <p class="B">
