--- a/game.html
+++ b/game.html
@@ -41,7 +41,7 @@ body {
 
 <p class="B">
 
-  <a href=''>  <button>Enter Anera</button></a>
+  <a href='Game2.html'>  <button>Enter Anera</button></a>
 
 </p>
 </body>
